unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Revenue_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Schedule__c</fullName>
    <description>Link to Revenue Schedule Header</description>
    <inlineHelpText>Link to Revenue Schedule Header</inlineHelpText>
    <label>Revenue Schedule</label>
    <referenceTo>CS_Revenue_Schedule__c</referenceTo>
    <relationshipLabel>Revenue Schedule Items</relationshipLabel>
    <relationshipName>Revenue_Schedule_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>