unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Sales_Order_Revenue_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Revenue_On_Hold__c</fullName>
    <formula>Revenue_Schedule__r.CS_Sales_Order_Schedule__r.Sales_Order_Revenue_On_Hold__c || Revenue_Schedule__r.CS_Sales_Order_Schedule__r.Revenue_Schedule_Items_Pending_Count__c &gt; 0 ||
Revenue_Schedule__r.CS_Sales_Order_Schedule__r.Open_After_Rev_Rec_Date__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Revenue On Hold</label>
    <type>Checkbox</type>
</CustomField>