unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Scheduled_Amount__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Amount__c</fullName>
    <description>The Scheduled amount (Scheduled Qty * Unit Price)</description>
    <inlineHelpText>The Scheduled amount (Scheduled Qty * Unit Price)</inlineHelpText>
    <label>Scheduled Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>