unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Indicates when 3rs Party data is uploaded from integration or manually.</description>
    <inlineHelpText>Indicates when 3rs Party data is uploaded from integration or manually.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>