unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Third_Party_Monthly_Actuals__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Monthly_Actuals__c</fullName>
    <label>Third Party Monthly Actuals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>