unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Total_Capped_Open_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Capped_Open_Quantity__c</fullName>
    <description>Calculates open quantity for Broadcast Calendar orders that exist in a single Gregorian Calendar month but cross Broadcast Calendar months. SMPI-288</description>
    <formula>IF(( Rev_Rec_Quantity__c - Total_Qty_In_Billing_Processes__c + Total_Open_Qty_in_Previous_Period__c) &gt;  Total_Open_Qty__c ,  Total_Open_Qty__c ,  Rev_Rec_Quantity__c - Total_Qty_In_Billing_Processes__c + Total_Open_Qty_in_Previous_Period__c )</formula>
    <label>Total Capped Open Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>