unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Total_Gross_Amount_In_Billing_Processes__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Amount_In_Billing_Processes__c</fullName>
    <formula>IF(Insertion_Unit_Type__c = &#39;CPM&#39; || Insertion_Unit_Type__c = &#39;CPCV&#39; || Insertion_Unit_Type__c = &#39;CPCL&#39;, (Gross_Rate__c * Total_Qty_In_Billing_Processes__c / 1000), Gross_Rate__c * Total_Qty_In_Billing_Processes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gross Amount In Billing Processes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>