unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Total_Open_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Net_Amount__c</fullName>
    <formula>IF(Insertion_Unit_Type__c = &#39;CPM&#39; || Insertion_Unit_Type__c = &#39;CPCV&#39; || Insertion_Unit_Type__c = &#39;CPCL&#39;, (Net_Rate__c * Total_Open_Qty__c / 1000), Net_Rate__c * Total_Open_Qty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Open Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>