unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Total_Open_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Qty__c</fullName>
    <label>Total Open Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>