unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Total_Open_Qty_in_Previous_Period__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Qty_in_Previous_Period__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Open Qty in Previous Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>