unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>Total Price as defined int the Sales Order Line</description>
    <inlineHelpText>Total Price as defined int the Sales Order Line</inlineHelpText>
    <label>Total Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>