unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Total_Qty_In_Billing_Processes__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_In_Billing_Processes__c</fullName>
    <label>Total Qty In Billing Processes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>