unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Total_Recognised__c.field-meta.xml
<CustomField>
    <fullName>Total_Recognised__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantity recognized and sent to the backend systems.</description>
    <inlineHelpText>Quantity recognized and sent to the backend systems.</inlineHelpText>
    <label>Total Recognised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>