unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Total_Recognised_QTY_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Recognised_QTY_To_Date__c</fullName>
    <description>Total revenue quantity recognised to date (from roll up summary header)</description>
    <formula>Revenue_Schedule__r.Total_Recognised_Quantity_To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total revenue quantity recognised to date</inlineHelpText>
    <label>Total Recognised QTY To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>