unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Total_Un_Billed_Net_Amount_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Un_Billed_Net_Amount_To_Date__c</fullName>
    <formula>IF(Insertion_Unit_Type__c = &#39;CPM&#39; || Insertion_Unit_Type__c = &#39;CPCV&#39; || Insertion_Unit_Type__c = &#39;CPCL&#39;, (Net_Rate__c * Total_Un_Billed_Quantity_To_Date__c / 1000), Net_Rate__c * Total_Un_Billed_Quantity_To_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Un-Billed Net Amount To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>