unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Total_Un_Billed_Quantity_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Un_Billed_Quantity_To_Date__c</fullName>
    <label>Total Un-Billed Quantity To Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>