unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Under_IFC__c.field-meta.xml
<CustomField>
    <fullName>Under_IFC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that Line item is unlocked for changes. (IFC)</description>
    <inlineHelpText>Indicates that Line item is unlocked for changes.</inlineHelpText>
    <label>Under In Flight Change</label>
    <type>Checkbox</type>
</CustomField>