unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/Viewability_Metric_Applied__c.field-meta.xml
<CustomField>
    <fullName>Viewability_Metric_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Viewability Metric is applied or not</description>
    <inlineHelpText>Indicates if Viewability Metric is applied or not</inlineHelpText>
    <label>Viewability Metric Applied</label>
    <type>Checkbox</type>
</CustomField>