unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/X3rd_Party_Actuals__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Actuals__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of impressions / clicks from 3rd Party Ad Server.</description>
    <inlineHelpText>Number of impressions / clicks from 3rd Party Ad Server.</inlineHelpText>
    <label>3rd Party Actuals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>