unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/fields/X3rd_Party_Tracking__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if 3rd Party Tracking is applied or not</description>
    <inlineHelpText>Indicates if 3rd Party Tracking is applied or not</inlineHelpText>
    <label>3rd Party Tracking</label>
    <type>Checkbox</type>
</CustomField>