unpackaged/main/default/objects/CS_Revenue_Schedule_Item__c/validationRules/RevRec_Lock_Editing.validationRule-meta.xml
<ValidationRule>
    <fullName>RevRec_Lock_Editing</fullName>
    <active>false</active>
    <description>On some status no changes can be made to the Rev Rec Schedule record</description>
    <errorConditionFormula>AND( $Setup.CS_Custom_Settings__c.Disable_Validation__c ==FALSE,(TEXT(PRIORVALUE(Status__c)) = &#39;Ready&#39; || TEXT(PRIORVALUE(Status__c)) = &#39;Closed&#39; ) &amp;&amp;
(ISCHANGED(Status__c) || ISCHANGED(Overwrite_Quantity__c)))</errorConditionFormula>
    <errorMessage>No changes can be made on Ready/ Closed status</errorMessage>
</ValidationRule>